# quiz_web_app

./: .env.example  .gitignore  AGENTS.md  README.md  docker-compose.yml  pyproject.toml  requirements-dev.txt
alembic/versions/: 20260706_1700_add_users_table.py  20260706_1800_add_quiz_tables.py  20260707_0001_add_question_position_unique_constraint.py  20260707_0100_add_session_tables.py  20260707_0200_add_active_question_event_unique_index.py
app/: main.py
app/core/: config.py  security.py
app/db/: session.py
app/models/: __init__.py  quiz.py  session.py  user.py
app/schemas/: auth.py  quiz.py  session.py
app/services/: auth.py  quiz.py  session.py
backend/: .dockerignore  .env.example  alembic.ini  requirements.txt
backend/alembic/: env.py
backend/app/: main.py
backend/tests/: test_active_question_window.py  test_automatic_playback.py  test_config.py  test_current_question.py  test_health.py  test_playback_migration.py  test_quiz_crud.py  test_quiz_migration.py  test_quiz_models.py  test_quiz_service_import.py  test_scoring.py  test_session_context.py  test_session_history.py  test_session_join.py  test_session_launch.py  test_session_migration.py  test_session_models.py  test_user_model.py  (+3 more)
frontend/: .dockerignore  README.md  index.html  package-lock.json  package.json  tsconfig.test.json
tests/: conftest.py  test_auth_login.py  test_auth_registration.py  test_auth_tokens.py  test_config.py  test_current_user.py  test_password_hashing.py  test_quiz_crud.py  test_quiz_migration.py  test_quiz_models.py  test_session_migration.py
(+53 files in other folders)
